--- a/src/Facebook.Archive.Runner/Facebook.Archive.Runner.csproj
+++ b/src/Facebook.Archive.Runner/Facebook.Archive.Runner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Facebook.Archive.Data\Facebook.Archive.Data.csproj" />
+    <ProjectReference Include="..\Facebook.Archive.Parsers\Facebook.Archive.Parsers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
